# simulacrum

./: .gitignore  Cargo.toml  README.md
examples/: simple.rs
simulacrum/: Cargo.toml  README.md
simulacrum/examples/: create_mock.rs  everything.rs  high_level.rs  low_level.rs  macros_high.rs  macros_mid.rs  manual.rs  mid_level.rs  simple.rs  with_macros.rs
simulacrum/src/: constraint.rs  expectation.rs  interface.rs  lib.rs  macros.rs  mock.rs  store.rs  user.rs
simulacrum/src/constraint/: mod.rs  result.rs
simulacrum/src/constraint/stock/: always.rs  mod.rs  params.rs  times.rs
simulacrum/src/expectation/: constraint.rs  mod.rs  result.rs
simulacrum/src/store/: era.rs  mod.rs
simulacrum/src/validator/: mod.rs
simulacrum/src/validator/stock/: check.rs  compare.rs  deref.rs  mod.rs  trivial.rs  tuple.rs
simulacrum_auto/: Cargo.toml  LICENSE  README.md
simulacrum_auto/examples/: example.rs
simulacrum_auto/src/: lib.rs
simulacrum_exp/: Cargo.toml
simulacrum_exp/src/: main.rs
simulacrum_macros/: Cargo.toml  README.md
simulacrum_macros/examples/: high_level.rs  mid_level.rs
simulacrum_macros/src/: lib.rs
simulacrum_mock/: Cargo.toml  README.md
simulacrum_mock/src/: lib.rs  method.rs  mock.rs  store.rs
simulacrum_mock/src/constraint/: mod.rs  result.rs
simulacrum_mock/src/constraint/stock/: always.rs  mod.rs  params.rs  times.rs
simulacrum_mock/src/expectation/: mod.rs  result.rs
simulacrum_proc_macro/: Cargo.toml  README.md
simulacrum_shared/: Cargo.toml  README.md
simulacrum_shared/src/: lib.rs  validator.rs
simulacrum_user/: Cargo.toml  README.md
simulacrum_user/src/: lib.rs  macros.rs
simulacrum_user/src/validators/: check.rs  compare.rs  deref.rs  mod.rs  trivial.rs  tuple.rs
src/: lib.rs
