[workspace]
members = [
	"simulacrum",
	"simulacrum_auto",
	"simulacrum_macros",
	"simulacrum_mock",
	"simulacrum_shared",
	"simulacrum_user"
]

[patch.crates-io]
# simulacrum_auto = { path = 'simulacrum_auto' }
simulacrum_macros = { path = 'simulacrum_macros' }
simulacrum_mock = { path = 'simulacrum_mock' }
simulacrum_shared = { path = 'simulacrum_shared' }
simulacrum_user = { path = 'simulacrum_user' }