[package]
name = "simulacrum"
version = "0.2.0"
authors = ["Jason Grlicky <jason@paracosm.us>"]
description = "A small library for creating mock objects by hand using stable Rust."
keywords = ["mock", "mocking", "test", "testing", "TDD"]
categories = ["development-tools::testing"]
readme = "README.md"
documentation = "https://docs.rs/simulacrum"
repository = "https://github.com/pcsm/simulacrum/tree/master/simulacrum"
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
debugit = "0.1"
handlebox = "0.3"