[package]
name = "simulacrum"
version = "0.3.1"
authors = ["Jason Grlicky <jason@paracosm.us>"]
description = "Minimal library for creating mock objects by hand using stable Rust."
keywords = ["mock", "mocking", "test", "testing", "TDD"]
categories = ["development-tools::testing"]
readme = "README.md"
documentation = "https://docs.rs/simulacrum"
repository = "https://github.com/pcsm/simulacrum/tree/master/simulacrum"
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
simulacrum_macros = "0.3.1"
simulacrum_mock = "0.1.0"
simulacrum_user = "0.1.0"