[package]
name = "simulacrum"
version = "0.4.0"
authors = ["Jason Grlicky <jason@paracosm.us>"]
description = "Minimal library for creating mock objects by hand using stable Rust."
keywords = ["mock", "mocking", "test", "testing", "TDD"]
categories = ["development-tools::testing"]
readme = "README.md"
documentation = "https://docs.rs/simulacrum"
repository = "https://github.com/pcsm/simulacrum/tree/master/simulacrum"
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies.simulacrum_macros]
path = "../simulacrum_macros"
version = "0.3.1"

[dependencies.simulacrum_mock]
path = "../simulacrum_mock"
version = "0.2.0"

[dependencies.simulacrum_user]
path = "../simulacrum_user"
version = "0.1.0"