[package]
name = "simulacrum_proc_macro"
version = "0.1.0"
authors = ["Jason Grlicky <jason@paracosm.us>"]
description = "Procedural macro to automatically create mock objects from traits."
keywords = ["mock", "mocking", "test", "testing", "TDD"]
categories = ["development-tools::testing"]
readme = "README.md"
documentation = "https://docs.rs/simulacrum_auto"
repository = "https://github.com/pcsm/simulacrum/simulacrum_auto"
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
quote = "0.3"
simulacrum = "0.1"
syn = { version = "0.11.11", features = ["full"] }

[lib]
proc-macro = true