[package]
name = "simulacrum_macros"
version = "0.1.0"
authors = ["Jason Grlicky <jason@paracosm.us>"]
description = "Macros to simplify creating mock objects with Simulacrum."
keywords = ["mock", "mocking", "test", "testing", "TDD"]
categories = ["development-tools::testing"]
readme = "README.md"
documentation = "https://docs.rs/simulacrum_macros"
repository = "https://github.com/pcsm/simulacrum/simulacrum_macros"
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
simulacrum = "0.1"
